Name:                jtrace
Version:             0.0
Cabal-version:       >= 1.2
Build-type:          Simple
Synopsis:            Ray tracer meeting the specification of the 2000 ICFP Programming Contest
License:             MIT
License-file:        LICENSE
Author:              James Lingard
Maintainer:          james@lingard.com

Executable jtrace
  Main-is:           Main.hs
  Other-modules:     Gml, GmlTokens, Machine, Operators, Ppm, Render, RenderOperator,
                     Transformations, Types, Utils
  Hs-source-dirs:    src
  Build-depends:     base >= 3 && < 5, array, containers, mtl
  Build-tools:       alex, happy
